--- a/Screensaver/Ealain/ConfigureSheet/ConfigureSheet.xib
+++ b/Screensaver/Ealain/ConfigureSheet/ConfigureSheet.xib
@@ -16,14 +16,14 @@
         <window title="Ealain Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g" userLabel="Ealain Settings">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="351" height="500"/>
+            <rect key="contentRect" x="196" y="240" width="371" height="500"/>
             <rect key="screenRect" x="0.0" y="0.0" width="3440" height="1440"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="351" height="500"/>
+                <rect key="frame" x="0.0" y="0.0" width="371" height="544"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XeC-oa-EiD">
-                        <rect key="frame" x="141" y="452" width="70" height="28"/>
+                        <rect key="frame" x="151" y="496" width="70" height="28"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Ealain" id="A1b-ty-yQK">
                             <font key="font" metaFont="system" size="24"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -31,7 +31,7 @@
                         </textFieldCell>
                     </textField>
                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cPI-vH-MTc">
-                        <rect key="frame" x="210" y="454" width="25" height="14"/>
+                        <rect key="frame" x="220" y="498" width="25" height="14"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="left" title="v1.0" id="aYW-mH-qB5">
                             <font key="font" metaFont="controlContent" size="11"/>
                             <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -39,7 +39,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zng-Ku-YRl">
-                        <rect key="frame" x="134" y="436" width="83" height="16"/>
+                        <rect key="frame" x="144" y="480" width="83" height="16"/>
                         <buttonCell key="cell" type="square" title="by Brad Root" bezelStyle="shadowlessSquare" alignment="center" imageScaling="proportionallyDown" inset="2" id="piz-AH-ud0">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -50,16 +50,16 @@
                         </connections>
                     </button>
                     <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="rhy-1B-SYh">
-                        <rect key="frame" x="20" y="413" width="311" height="5"/>
+                        <rect key="frame" x="20" y="457" width="331" height="5"/>
                     </box>
                     <box borderType="line" title="About" translatesAutoresizingMaskIntoConstraints="NO" id="kB6-qM-Jeb">
-                        <rect key="frame" x="17" y="263" width="317" height="144"/>
+                        <rect key="frame" x="17" y="295" width="337" height="152"/>
                         <view key="contentView" id="ghs-dd-PVQ">
-                            <rect key="frame" x="4" y="5" width="309" height="124"/>
+                            <rect key="frame" x="4" y="5" width="329" height="132"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tK8-WM-0fa">
-                                    <rect key="frame" x="18" y="44" width="273" height="64"/>
+                                    <rect key="frame" x="18" y="52" width="293" height="64"/>
                                     <textFieldCell key="cell" selectable="YES" alignment="left" id="zBi-Um-mdD">
                                         <font key="font" metaFont="system"/>
                                         <string key="title">Ealain generates art via the AI Horde, a crowdsourced distributed cluster of image generation workers, run for free by enthusiastic volunteers.</string>
@@ -68,7 +68,7 @@
                                     </textFieldCell>
                                 </textField>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XFV-Yg-mtc">
-                                    <rect key="frame" x="20" y="20" width="233" height="16"/>
+                                    <rect key="frame" x="20" y="20" width="289" height="16"/>
                                     <buttonCell key="cell" type="square" title="Click here to more about the AI Horde" bezelStyle="shadowlessSquare" alignment="left" imageScaling="proportionallyDown" inset="2" id="om0-po-jn5">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" metaFont="system"/>
@@ -80,24 +80,24 @@
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="XFV-Yg-mtc" firstAttribute="top" secondItem="tK8-WM-0fa" secondAttribute="bottom" constant="8" symbolic="YES" id="7dA-Jc-Wnf"/>
+                                <constraint firstItem="XFV-Yg-mtc" firstAttribute="top" secondItem="tK8-WM-0fa" secondAttribute="bottom" constant="16" id="7dA-Jc-Wnf"/>
                                 <constraint firstItem="XFV-Yg-mtc" firstAttribute="leading" secondItem="ghs-dd-PVQ" secondAttribute="leading" constant="20" symbolic="YES" id="8Lw-b9-5hm"/>
                                 <constraint firstAttribute="bottom" secondItem="XFV-Yg-mtc" secondAttribute="bottom" constant="20" symbolic="YES" id="Hdq-AL-LfB"/>
                                 <constraint firstItem="tK8-WM-0fa" firstAttribute="top" secondItem="ghs-dd-PVQ" secondAttribute="top" constant="16" id="Jot-0f-OKs"/>
                                 <constraint firstAttribute="trailing" secondItem="tK8-WM-0fa" secondAttribute="trailing" constant="20" symbolic="YES" id="XF8-gV-jPl"/>
                                 <constraint firstItem="tK8-WM-0fa" firstAttribute="leading" secondItem="ghs-dd-PVQ" secondAttribute="leading" constant="20" symbolic="YES" id="m3H-uY-dqw"/>
-                                <constraint firstAttribute="trailing" secondItem="XFV-Yg-mtc" secondAttribute="trailing" constant="56" id="y3X-c7-kxm"/>
+                                <constraint firstAttribute="trailing" secondItem="XFV-Yg-mtc" secondAttribute="trailing" constant="20" symbolic="YES" id="y3X-c7-kxm"/>
                             </constraints>
                         </view>
                     </box>
                     <box title="Style Override" translatesAutoresizingMaskIntoConstraints="NO" id="1gf-Ju-X9J">
-                        <rect key="frame" x="17" y="73" width="317" height="186"/>
+                        <rect key="frame" x="17" y="73" width="337" height="210"/>
                         <view key="contentView" id="xgk-1N-ZTe">
-                            <rect key="frame" x="4" y="5" width="309" height="166"/>
+                            <rect key="frame" x="4" y="5" width="329" height="190"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SaU-XM-Tq8">
-                                    <rect key="frame" x="20" y="125" width="218" height="21"/>
+                                    <rect key="frame" x="20" y="149" width="238" height="21"/>
                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="JzB-i6-I0M">
                                         <font key="font" usesAppearanceFont="YES"/>
                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -105,48 +105,57 @@
                                     </textFieldCell>
                                 </textField>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="e73-zO-9k0">
-                                    <rect key="frame" x="239" y="118" width="64" height="32"/>
+                                    <rect key="frame" x="259" y="142" width="64" height="32"/>
                                     <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IBc-P1-nBF">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                 </button>
+                                <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="m0D-Kc-I8g">
+                                    <rect key="frame" x="16" y="130" width="297" height="5"/>
+                                </box>
                                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xKL-A3-b1X">
-                                    <rect key="frame" x="18" y="53" width="273" height="64"/>
-                                    <textFieldCell key="cell" selectable="YES" id="ARh-7G-iDg">
+                                    <rect key="frame" x="18" y="52" width="293" height="64"/>
+                                    <textFieldCell key="cell" selectable="YES" alignment="left" id="ARh-7G-iDg">
                                         <font key="font" metaFont="system"/>
                                         <string key="title">Paste in a Horde Style ID here and click Save to override the default style of the screensaver. Remove and hit Save to go back to the default art style.</string>
                                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
                                 </textField>
-                                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1GJ-Oy-YEN">
-                                    <rect key="frame" x="20" y="20" width="220" height="16"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1GJ-Oy-YEN">
+                                    <rect key="frame" x="20" y="20" width="289" height="16"/>
                                     <buttonCell key="cell" type="square" title="Click here to find more Ealain styles" bezelStyle="shadowlessSquare" alignment="left" imageScaling="proportionallyDown" inset="2" id="cYK-f3-F6G">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                     <color key="contentTintColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
-                                        <action selector="aiHordeLinkAction:" target="-2" id="HLB-kK-rlJ"/>
+                                        <action selector="styleLinkActionWith_sender:" target="-2" id="d16-cP-ri2"/>
                                     </connections>
                                 </button>
                             </subviews>
                             <constraints>
+                                <constraint firstAttribute="trailing" secondItem="1GJ-Oy-YEN" secondAttribute="trailing" constant="20" symbolic="YES" id="1Sb-9c-xU2"/>
+                                <constraint firstItem="m0D-Kc-I8g" firstAttribute="leading" secondItem="xgk-1N-ZTe" secondAttribute="leading" constant="16" id="A0F-sx-lFD"/>
                                 <constraint firstItem="e73-zO-9k0" firstAttribute="top" secondItem="xgk-1N-ZTe" secondAttribute="top" constant="21" id="AdF-a7-dg2"/>
+                                <constraint firstItem="m0D-Kc-I8g" firstAttribute="top" secondItem="SaU-XM-Tq8" secondAttribute="bottom" constant="16" id="GD3-Li-iPi"/>
+                                <constraint firstAttribute="bottom" secondItem="1GJ-Oy-YEN" secondAttribute="bottom" constant="20" symbolic="YES" id="NOq-kl-q4d"/>
                                 <constraint firstItem="SaU-XM-Tq8" firstAttribute="leading" secondItem="xgk-1N-ZTe" secondAttribute="leading" constant="20" symbolic="YES" id="PNk-E1-Vz0"/>
                                 <constraint firstItem="SaU-XM-Tq8" firstAttribute="top" secondItem="xgk-1N-ZTe" secondAttribute="top" constant="20" symbolic="YES" id="UbG-Ba-blY"/>
                                 <constraint firstItem="e73-zO-9k0" firstAttribute="leading" secondItem="SaU-XM-Tq8" secondAttribute="trailing" constant="8" symbolic="YES" id="icW-6T-kh4"/>
+                                <constraint firstItem="1GJ-Oy-YEN" firstAttribute="top" secondItem="xKL-A3-b1X" secondAttribute="bottom" constant="16" id="jPh-lq-PNp"/>
                                 <constraint firstAttribute="trailing" secondItem="xKL-A3-b1X" secondAttribute="trailing" constant="20" symbolic="YES" id="kT5-Uh-xdK"/>
-                                <constraint firstItem="xKL-A3-b1X" firstAttribute="top" secondItem="SaU-XM-Tq8" secondAttribute="bottom" constant="8" symbolic="YES" id="qtD-Yy-ncO"/>
+                                <constraint firstItem="1GJ-Oy-YEN" firstAttribute="leading" secondItem="xgk-1N-ZTe" secondAttribute="leading" constant="20" symbolic="YES" id="lNf-iI-Xe4"/>
+                                <constraint firstItem="xKL-A3-b1X" firstAttribute="top" secondItem="m0D-Kc-I8g" secondAttribute="bottom" constant="16" id="oh6-vL-cLe"/>
                                 <constraint firstItem="xKL-A3-b1X" firstAttribute="leading" secondItem="xgk-1N-ZTe" secondAttribute="leading" constant="20" symbolic="YES" id="uLl-ud-nLt"/>
                                 <constraint firstAttribute="trailing" secondItem="e73-zO-9k0" secondAttribute="trailing" constant="13" id="y8I-md-D8S"/>
+                                <constraint firstAttribute="trailing" secondItem="m0D-Kc-I8g" secondAttribute="trailing" constant="16" id="zBM-e8-gMi"/>
                             </constraints>
                         </view>
                     </box>
                     <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="Ezl-WK-wYQ">
-                        <rect key="frame" x="20" y="58" width="311" height="5"/>
+                        <rect key="frame" x="20" y="58" width="331" height="5"/>
                     </box>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UuZ-Bu-QIk">
                         <rect key="frame" x="20" y="22" width="214" height="16"/>
@@ -160,7 +169,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ckD-Qe-k8M">
-                        <rect key="frame" x="272" y="13" width="66" height="32"/>
+                        <rect key="frame" x="292" y="13" width="66" height="32"/>
                         <buttonCell key="cell" type="push" title="Done" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="Dbk-lg-fru">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -189,10 +198,10 @@ DQ
                     <constraint firstItem="Ezl-WK-wYQ" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="OLr-eW-Gi5"/>
                     <constraint firstItem="cPI-vH-MTc" firstAttribute="leading" secondItem="XeC-oa-EiD" secondAttribute="trailing" constant="3" id="X85-eC-9u9"/>
                     <constraint firstItem="ckD-Qe-k8M" firstAttribute="top" secondItem="Ezl-WK-wYQ" secondAttribute="bottom" constant="20" symbolic="YES" id="YSC-np-tWS"/>
-                    <constraint firstItem="kB6-qM-Jeb" firstAttribute="top" secondItem="rhy-1B-SYh" secondAttribute="bottom" constant="8" symbolic="YES" id="gDn-OX-SvE"/>
+                    <constraint firstItem="kB6-qM-Jeb" firstAttribute="top" secondItem="rhy-1B-SYh" secondAttribute="bottom" constant="12" id="gDn-OX-SvE"/>
                     <constraint firstItem="cPI-vH-MTc" firstAttribute="firstBaseline" secondItem="XeC-oa-EiD" secondAttribute="firstBaseline" id="kyW-SE-0uq"/>
                     <constraint firstAttribute="trailing" secondItem="ckD-Qe-k8M" secondAttribute="trailing" constant="20" symbolic="YES" id="lcN-pZ-oMI"/>
-                    <constraint firstItem="1gf-Ju-X9J" firstAttribute="top" secondItem="kB6-qM-Jeb" secondAttribute="bottom" constant="8" symbolic="YES" id="lpJ-cj-prk"/>
+                    <constraint firstItem="1gf-Ju-X9J" firstAttribute="top" secondItem="kB6-qM-Jeb" secondAttribute="bottom" constant="16" id="lpJ-cj-prk"/>
                     <constraint firstItem="XeC-oa-EiD" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="mbv-ex-NLO"/>
                     <constraint firstItem="XeC-oa-EiD" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="t1t-OB-CZU"/>
                     <constraint firstItem="zng-Ku-YRl" firstAttribute="top" secondItem="XeC-oa-EiD" secondAttribute="bottom" id="t8Y-d4-0ZQ"/>
@@ -200,7 +209,7 @@ DQ
                     <constraint firstItem="UuZ-Bu-QIk" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="xXw-9N-D8d"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="-95.5" y="23"/>
+            <point key="canvasLocation" x="-85.5" y="23"/>
         </window>
     </objects>
 </document>
